--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -59,12 +59,12 @@
 				<ion-list>
 					<div class="item item-divider"><strong>Interface</strong></div>
 
-					<ion-item ng-click="syntheticPanel()">
+					<ion-item ng-click="syntheticPanel()" id="synthetic">
 						<div class="avatar-icon-placeholder"></div>Synthetic Voice
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<ion-item ng-click="soundPanel()">
+					<ion-item ng-click="soundPanel()" id="sound">
 						<div class="avatar-icon-placeholder"></div>Sound Effects
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -79,7 +79,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="phrasePanel()">
+					<ion-item ng-click="phrasePanel()" id="phrase">
 						<div class="avatar-icon-placeholder"></div>Phrase Bar
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -98,7 +98,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="alternatePanel()">
+					<ion-item ng-click="alternatePanel()" id="alternate">
 						<div class="avatar-icon-placeholder"></div>Alternate Home Page
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
