--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -76,9 +76,9 @@ $dark:                            #444 !default;
   text-align: center;
 }
 
-.color-choice.selectedColor{
+/*.color-choice.selectedColor{
   background-color: blue;
-}
+}*/
 
 .real-content {
   width: 40%;
