--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -6,8 +6,8 @@
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-eye-disabled"></i> Show/Hide Tiles
         </button>
-        <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling">
-          <i class="icon ion-ios-chatbubble"></i> Board Factory
+        <button class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-ios-chatbubble"></i> <a href="#/board_factory">Board Factory</a>
         </button>
         <button class="button"><a href="#/home">Done</a></button>
       </div>
