--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -106,7 +106,7 @@
           </div>
 
           <div class="col" style="background: #50E2E3;">
-            <img src="img/AAC_assets/left.png"/>
+            <img src="img/AAC_assets/left.png" style="padding-left:20px;"/>
             <img src="img/AAC_assets/right.png"/>
             <!-- <img src="img/AAC_assets/tile_tapped_slice.png"/> -->
           </div>
