--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -10,12 +10,12 @@
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-eye-disabled"></i> Show/Hide Tiles
         </button>
-        <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling">
-          <i class="icon ion-ios-chatbubble"></i> Board Factory
+        <button class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-ios-chatbubble"></i> <a href="#/board_factory">Board Factory</a>
         </button>
         <button class="button"><a href="#/home">Done</a></button>
       </div>
-    </ion-header-bar>
+</ion-header-bar>
 
 <ion-view view-title="AAC" class="pane">
 	<ion-content class= "appBody" id="bodyBack" style="background-color:#98E3E3;">
