--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -10,7 +10,7 @@
       <i class="icon ion-ios-chatbubble"></i> <a href="#/board_factory">Board Factory</a>
     </button>
     <button class="button"><a href="#/home">Done</a></button>
-     </div>
+  </div>
 </ion-header-bar>
 
 <ion-view view-title="AAC" class="pane">
@@ -25,11 +25,13 @@
       </div>
       <div class="col">
           <div class="boards" ng-repeat="board in dummyBoards">
-            <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
+            <a href="#/board_factory/sample_edit">
+              <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
 
-            <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
-          
-            <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
+              <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
+            
+              <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
+            </a>
           </div>
           <!-- <br>
           <div class="forward-buttons">
