--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -17,7 +17,12 @@
   <ion-content class= "appBody" id="bodyBack">
   <div class="row">
     <div class="col col-67" style="background-color:#50E2E3;">
-      <p>Words</p>
+      <i class="icon ion-ios-arrow-left"></i>
+      <div id="newboard">
+        <h1 class="factory-title">Editing Copy of Art {Board Title}</h1>
+        <p class="board-instructions"><i class="icon ion-help-circled"></i> Tap a tile to select a Board to edit. Press and hold a Board tile to move it to a different place. Tap the minus sign to remove the tile from the Board.</p>
+        
+       </div>
     </div>
     <div class="col" style="background-color:#FFFFFF;">
       <p>More Words</p>
