--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -30,17 +30,18 @@
         </div>
 
         <span ng-repeat="row in rows">
-          <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])">
+          <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" style="position:relative; z-index:0;">
+            <i class="icon ion-ios-minus-outline"></i>
             <span ng-show="filled_tiles.indexOf(col+row)!=-1">
               {{board.symbols[col+row].word}}<br>
-              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
+              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0;">
             </span>
           </div>
         </span>
       </div>
-
     </div>
-    <div class="col" style="background-color:#FFFFFF;">
+
+    <div class="col" style="background-color:#FFFFFF;" id="edit-input-section">
       <!-- <p>More Words</p> -->
       <h1 class="edit-title">Edit Copy of Art {Board Title}</h1>
 
@@ -53,7 +54,7 @@
 
       <div class="symbol-section">
         <p class="edit-subheading">Choose a symbol to identify your board</p>
-        <button><i class="icon ion-search"></i> Browse for image</button>
+        <button class="custom-button-inverse"><i class="icon ion-search"></i> Browse for image</button>
       </div>
 
       <div class="tag-section">
