--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -15,13 +15,49 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
-.icon.ion-ios-minus-outline{
+/*.icon.ion-ios-minus-outline{
   color:#B70016;
   font-weight: 1000;
   font-size: 2em;
   position:relative;
   z-index:4;
-  margin-right: 80px;
+  /*margin-right: 80px;*/
+  /*float:right;*/
+  /*padding-left: -5px;*/
+  /*margin-top: -14px;*/
+  /*background-color: #FFE0D4;*/
+/*}*/
+
+/*.ion-android-remove-circle{
+  color:#B70016;
+  font-weight: 1000;
+  font-size: 2em;
+  position:relative;
+  z-index:4;*/
+  /*margin-right: 80px;*/
+  /*float:right;*/
+  /*padding-left: -5px;*/
+  /*margin-top: -14px;*/
+  /*background-color: #FFE0D4;*/
+/*}*/
+
+.manual-minus{
+  width:20px;
+  height:20px;
+  border-radius:10px;
+  background-color:#FFE0D4;
+  float:right;
+  border-style: solid;
+  border-width: 2px;
+  color:#B70016;
+  margin-top: -10px;
+  margin-right: -10px;
+}
+
+.manual-minus p{
+  color:#B70016;
+  font-size: 3em;
+  margin-top: -4px;
 }
 
 input[type="text"]{
