--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -18,10 +18,6 @@
   <div class="row">
     <div class="col col-67" style="background-color:#50E2E3;">
       <i class="icon ion-ios-arrow-left"></i>
-      <!-- <div id="newboard">
-        <h1 class="factory-title">Editing Copy of Art {Board Title}</h1>
-        <p class="board-instructions2"><i class="icon ion-help-circled"></i> Tap a tile to select a Board to edit. Press and hold a Board tile to move it to a different place. Tap the minus sign to remove the tile from the Board.</p>
-      </div> -->
 
       <div class="board-factory-tile-section">
         <div id="newboard2">
@@ -31,7 +27,11 @@
 
         <span ng-repeat="row in rows">
           <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" style="position:relative; z-index:0;">
-            <i class="icon ion-ios-minus-outline"></i>
+            <!-- <span ng-show="filled_tiles.indexOf(col+row)!=-1">
+              <i class="icon ion-ios-minus-outline" style="float:left;"></i>
+            </span> -->
+            <!-- <i class="icon ion-android-remove-circle"></i> -->
+            <div class="manual-minus"><p>-</p></div>
             <span ng-show="filled_tiles.indexOf(col+row)!=-1">
               {{board.symbols[col+row].word}}<br>
               <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0;">
