fixed all minor styling issues. Story now done

--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -15,9 +15,9 @@
 
 <ion-view view-title="AAC" class="pane">
   <ion-content class= "appBody" id="bodyBack">
-  <div class="row">
+  <div class="row" style="margin:-5px; width: 101%; height:800px;">
     <div class="col col-67" style="background-color:#50E2E3;">
-      <i class="icon ion-ios-arrow-left"></i>
+      <a href="#/board_factory"><i class="icon ion-ios-arrow-left"></i></a>
 
       <div class="board-factory-tile-section">
         <div id="newboard2">
@@ -47,9 +47,9 @@
 
       <div class="title-section">
         <p class="edit-subheading">Enter new title</p>
-        <label class="item item-input">
+        <!-- <label class="item item-input"> -->
           <input type="text" name="title">
-        </label> 
+        <!-- </label>  -->
       </div>
 
       <div class="symbol-section">
@@ -59,7 +59,8 @@
 
       <div class="tag-section">
         <p class="edit-subheading">Add Tags, comma separated</p>
-        <label class="item item-input">
+        <!-- <label class="item item-input"> -->
+        <label>
           <input type="text" name="tags">
         </label>
       </div>
