--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -40,7 +40,7 @@
           </div> -->
       </div>
       <div class="col col-25">
-        <button class="board-search"><i class="icon ion-search"></i> Search</button>
+        <button class="custom-button-inverse"><i class="icon ion-search"></i> Search</button>
       </div>
     </div>
 
