--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -50,7 +50,7 @@
 						<p style="color:#8F8F8F; padding:3px; font-weight:bold; font-style:italic;">Enable/disable live chat buddy</p>
 					</ion-item>
 
-					<ion-item ng-click="settingsPanel()" id="settings">
+					<ion-item ng-click="panel(1)" id="settings">
 						<div class="avatar-icon-placeholder"></div>Settings Access
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -59,12 +59,12 @@
 				<ion-list>
 					<div class="item item-divider"><strong>Interface</strong></div>
 
-					<ion-item ng-click="syntheticPanel()" id="synthetic">
+					<ion-item ng-click="panel(2)" id="synthetic">
 						<div class="avatar-icon-placeholder"></div>Synthetic Voice
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<ion-item ng-click="soundPanel()" id="sound">
+					<ion-item ng-click="panel(3)" id="sound">
 						<div class="avatar-icon-placeholder"></div>Sound Effects
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -79,7 +79,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="phrasePanel()" id="phrase">
+					<ion-item ng-click="panel(4)" id="phrase">
 						<div class="avatar-icon-placeholder"></div>Phrase Bar
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -98,7 +98,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="alternatePanel()" id="alternate">
+					<ion-item ng-click="panel(5)" id="alternate">
 						<div class="avatar-icon-placeholder"></div>Alternate Home Page
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
