calling this one done for now

--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -111,13 +111,13 @@
 					<h1 class="title"><strong>Settings</strong></h1>
 				</div> -->
 				<ion-list> 
-					<ion-item style="margin-left:5px;margin-top:-6px;">
+					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
 						<h1 class="centered-title"><strong>Settings Access</strong></h1>
 					</ion-item>
 				</ion-list>
 
 				<div class="settings-box">
-						<label class="toggle toggle-balanced">
+						<label class="toggle toggle-balanced" style="margin-right:5px;">
 						<input type="checkbox">
 							<div class="track">
 								<div class="handle"></div>
@@ -137,7 +137,7 @@
 <!-- Synthetic Voice Panel -->
 			<div class="col col-67" id="settings-modal" ng-show="step == 2">
 				<ion-list> 
-					<ion-item style="margin-left:5px;margin-top:-6px;">
+					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
 						<h1 class="centered-title"><strong>Synthetic Voice</strong></h1>
 					</ion-item>
 				</ion-list>
@@ -162,13 +162,13 @@
 <!-- Sound Effects Panel -->
 			<div class="col col-67" id="settings-modal" ng-show="step == 3">
 				<ion-list> 
-					<ion-item style="margin-left:5px;margin-top:-6px;">
+					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
 						<h1 class="centered-title"><strong>Sound Effects</strong></h1>
 					</ion-item>
 				</ion-list>
 
 				<div class="settings-box">
-					<label class="toggle toggle-balanced">
+					<label class="toggle toggle-balanced" style="margin-right:5px;">
 						<input type="checkbox">
 							<div class="track">
 								<div class="handle"></div>
@@ -188,13 +188,13 @@
 <!-- Phrase Bar Panel -->
 			<div class="col col-67" id="settings-modal" ng-show="step == 4">
 				<ion-list> 
-					<ion-item style="margin-left:5px;margin-top:-6px;">
+					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
 						<h1 class="centered-title"><strong>Phrase Bar</strong></h1>
 					</ion-item>
 				</ion-list>
 
 				<div class="settings-box">
-						<label class="toggle toggle-balanced">
+						<label class="toggle toggle-balanced" style="margin-right:5px;">
 						<input type="checkbox">
 							<div class="track">
 								<div class="handle"></div>
@@ -204,7 +204,7 @@
 				</div>
 
 				<div class="settings-box">
-						<label class="toggle toggle-balanced">
+						<label class="toggle toggle-balanced" style="margin-right:5px;">
 						<input type="checkbox">
 							<div class="track">
 								<div class="handle"></div>
@@ -217,13 +217,13 @@
 <!-- Alternate Home Page -->
 			<div class="col col-67" id="settings-modal" ng-show="step == 5">
 				<ion-list> 
-					<ion-item style="margin-left:5px;margin-top:-6px;">
+					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
 						<h1 class="centered-title"><strong>Alternate Home Page</strong></h1>
 					</ion-item>
 				</ion-list>
 
 				<div class="settings-box">
-						<label class="toggle toggle-balanced">
+						<label class="toggle toggle-balanced" style="margin-right:5px;">
 						<input type="checkbox">
 							<div class="track">
 								<div class="handle"></div>
@@ -233,7 +233,7 @@
 
 						<br>
 
-						<label class="toggle toggle-balanced">
+						<label class="toggle toggle-balanced" style="margin-right:5px;">
 						<input type="checkbox">
 							<div class="track">
 								<div class="handle"></div>
@@ -250,15 +250,3 @@
 		</div>
 	</ion-content>
 </ion-view>
-
-<!-- <div class="col col-67">
-	<ion-header-bar class="bar-stable">
-	   <h1 class="title"><strong>Words</strong></h1>
-	</ion-header-bar>
-	<p>Words</p>
-</div> -->
-<!-- </div> -->
-
-<!-- <div class="avatar-box"> -->
-	<!-- <div class="avatar-icon-placeholder"></div> -->
-<!-- </div> -->
