--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -16,6 +16,30 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+.top-button{
+  position:absolute; 
+  margin:42% 30% 30% 39%;
+}
+
+.new-board-placeholder{
+  height:650px;
+  padding-right: -20px;
+  width:90%;
+  position:relative;
+  z-index:5;
+}
+
+.board-factory-placeholder{
+  width:70px;
+  height:70px;
+  border-radius: 15px;
+  background-color:#73E7E8;
+  float:left;
+  position: relative;
+  z-index:0;
+  margin:7px;
+}
+
 .manual-minus{
   width:20px;
   height:20px;
@@ -79,6 +103,12 @@ input[type="text"]:focus, textarea:focus{
   margin-left:11%;
 }
 
+.board-factory-tile-section2{
+  width:90%;
+  margin-left:13%;
+  margin-top: 5%;
+}
+
 .icon.ion-ios-arrow-left{
   font-size: 2em;
   color: #7C7C7D;
@@ -139,6 +169,11 @@ input[type="text"]:focus, textarea:focus{
   padding:5px;
   font-weight:600;
   box-shadow: 0px 3px 0px 0px #006364;
+}
+
+.custom-button a{
+  color:white;
+  text-decoration: none;
 }
 
 .custom-button-inverse{
