--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -26,7 +26,7 @@
         <div id="newboard">
         <h1 class="factory-title">Manage Your Boards</h1>
         <p class="board-instructions"><i class="icon ion-help-circled"></i> Tap a tile to select a Board to edit. Press and hold a Board tile to move it to a different place</p>
-        <button class="custom-button"><i class="ion-plus"></i> Add a New Board</button>
+        <button class="custom-button"><i class="ion-plus"></i><a href="#/board_factory/new"> Add a New Board</a></button>
        </div>
       </div>
       <div class="col">
