got selected index to work, kind of

--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -20,7 +20,7 @@ $dark:                            #444 !default;
   background-color:white;
 }
 
-.tile.light-blue{
+.tile.lightBlue{
   background-color:#83EFF0;
   border-color:white;
 }
