added stuff to the modal

--- a/aac-ionic/www/templates/aac-partials/_word-change.html
+++ b/aac-ionic/www/templates/aac-partials/_word-change.html
@@ -1,7 +1,16 @@
-<div class="modal" id="color-modal-style">
+<div class="modal">
+<!-- id="color-modal-style"> -->
   <ion-content>
     <div class="modal-container">
-    	<h1>This Worked!!!</h1>
+    	<p class="modal-header"><strong>Replace Word</strong> <i class="icon ion-close-round"></i></p>
+    	<p><em>Tap to select your word</em></p>
+    	<label>
+          <input type="text" name="tags">
+        </label>
+        <br>
+        <p class="modal-header"><strong>Replace Symbol</strong></p>
+		<button class="custom-button-inverse"><i class="icon ion-search"></i> Browse for image</button>
+		<button class="custom-button">Finish Editing</button>
     </div>
   </ion-content>
 </div>
