--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -36,14 +36,14 @@
         </div>
 
         <span ng-repeat="row in rows">
-          <ul ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" style="position:relative; z-index:0;" ng-drop="true" ng-drop-success="onDropComplete($index, $data, $event)">
-            <div class="tile" ng-drag="true" ng-drag-data="col" ng-class="col.word">
-              <li class="manual-minus"><p>-</p></li>
-              <li ng-show="filled_tiles.indexOf(col+row)!=-1">
+          <ul ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" style="position:relative; z-index:0;" ng-drop-success="onDropComplete($index, $data, $event)">
+            <li class="tile" ng-drop="true" ng-drag="true" ng-drag-data="col" ng-class="col.word">
+              <div class="manual-minus"><p>-</p></div>
+              <div ng-show="filled_tiles.indexOf(col+row)!=-1">
                 {{board.symbols[col+row].word}}<br>
                 <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0;">
-              </li>
-            </div>
+              </div>
+            </li>
           </ul>
         </span>
       </div>
