major css changes officially made for settings and board_factory

--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -10,12 +10,12 @@
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
-          <i class="icon ion-eye"></i>Show All Tiles
+          <i class="icon ion-eye-disabled"></i>Hide Tiles
           <br>
           <p class="show-hide-label">*Requires Wifi</p>
         </button>
 
-        <button class="done-button"><p><a href="#/home">DONE</a></p></div>
+        <!-- <button class="done-button"><p><a href="#/home">DONE</a></p></div> -->
       </div>
     </ion-header-bar>
 
