--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -240,9 +240,10 @@ float:left;
 } 
 .show-hide-label{
   margin-top:-25px;
+  padding-top: 2px;
   font-size: .75em;
   margin-bottom:-10px;
-  color:#50E2E3;
+  /*color:#50E2E3;*/
 }
 .icon.ion-locked{
   font-size:2.5em;
@@ -255,9 +256,10 @@ float:left;
   /*margin-right: 2%;*/
   /*margin-left: 1%;*/
   float:right;
-  border-radius: 5px;
+  border-radius: 20px;
   border-style: solid;
-  border-color: #50E2E3;
+  /*border-color: #50E2E3;*/
+  border-color: #006E70;
 }
 
 .done-button p{
@@ -266,6 +268,23 @@ float:left;
   margin-bottom: -1px;
   margin-left: 5px;
   margin-right: 6px;
+}
+
+.icon.ion-gear-b, .icon.ion-grid, .icon.ion-eye-disabled{
+  font-size: .75em;
+}
+
+.done-button a{
+  color:#008485;
+  text-decoration: none;
+}
+
+#selected-btn{
+  background-color: #6FCACB;
+  color:white;
+  border-radius: 0;
+  margin-left: 8px;
+  border-color: #6FCACB; 
 }
 
 .icon.ion-unlocked{
@@ -446,7 +465,7 @@ float:left;
   }*/
 
 #btn-styling {
-  border-color: #50E2E3;
+  /*border-color: #50E2E3;*/
   /*color: #50E2E3;*/
   border-radius: 0;
   margin-left: 8px; }
