--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -2,7 +2,7 @@
       <div class="buttonsdiv">
         <i class="icon ion-unlocked"></i>
         <!-- <i class="icon ion-locked"></i> -->
-        <button class="button button-outline button-calm button-small" id="btn-styling">
+        <button class="button button-outline button-calm button-small" id="selected-btn">
           <a href="/#/settings"><i class="icon ion-gear-b"></i> Settings</a>
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
@@ -10,12 +10,12 @@
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
-          <i class="icon ion-eye"></i>Show All Tiles
+          <i class="icon ion-eye-disabled"></i>Hide Tiles
           <br>
           <p class="show-hide-label">*Requires Wifi</p>
         </button>
 
-        <button class="done-button"><p><a href="#/home">DONE</a></p></div>
+        <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">Done</a></p></div>
       </div>
  </ion-header-bar>
 
