--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -8,7 +8,7 @@
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
         </button>
-        <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
+        <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;" ng-click="activeHide()" ng-class="class">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
           <i class="icon ion-eye-disabled"></i>Hide Tiles
           <br>
