added toggle and integrated with other buttons

--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -7,12 +7,21 @@
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
+          <br>
+          <p class="show-hide-label">*Requires Wifi</p>
         </button>
+
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;" ng-click="activeHide()" ng-class="class">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
           <i class="icon ion-eye-disabled"></i>Hide Tiles
-          <br>
-          <p class="show-hide-label">*Requires Wifi</p>
+          <label class="toggle" style="position:relative; z-index:3" ng-if="hide">
+            <input type="checkbox">
+            <div class="track" id="track-color">
+              <div class="handle" id="handle-color"></div>
+            </div>
+          </label>
+        </button>
+        <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p>
         </button>
 
         <!-- <button class="done-button"><p><a href="#/home">DONE</a></p></div> -->
