--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -295,6 +295,10 @@ button.button-outline.button-calm.button-small.selected-btn2{
   border-color: #6FCACB;
 }
 
+/*.handle{
+  background-color: #77CE20;
+}*/
+
 .icon.ion-unlocked{
   font-size:2.5em;
   color:#77CE20;
@@ -464,17 +468,9 @@ button.button-outline.button-calm.button-small.selected-btn2{
     height:75px;
     background-color: #008485;
     border-radius: 37.5px;
-   /* float:left;
-    margin-left:20px;*/
   }
 
- /* #triangle-color {
-    border-color: #000000;
-  }*/
-
 #btn-styling {
-  /*border-color: #50E2E3;*/
-  /*color: #50E2E3;*/
   border-radius: 0;
   margin-left: 8px; }
 
@@ -556,6 +552,14 @@ button.button-outline.button-calm.button-small.selected-btn2{
 .buttonsdiv{
   margin-left: 200px;
 }
+
+#handle-color{
+  background-color: #77CE20;
+}
+
+/*#track-color{
+  background-color:#1D7E80;
+}*/
 
 .boardline {
   height: 2px;
