--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -35,6 +35,14 @@ $dark:                            #444 !default;
   margin-top: -4px;
 }
 
+.toggle-note{
+  font-size: 8px;
+  color: black;
+  margin:-30px -3px -8px 0px;
+  font-weight: bold;
+  /*float:right;*/
+}
+
 input[type="text"]{
   display: block;
   margin: 0;
@@ -520,9 +528,6 @@ button.button-outline.button-calm.button-small.selected-btn2{
 .toggle {
   float: right; }
 
-.track p {
-  font-size: 50%; }
-
 #home-section {
   float: right;
   margin-top: 12px; }
@@ -531,13 +536,6 @@ button.button-outline.button-calm.button-small.selected-btn2{
   background: white;
   padding-left: 15px;
   margin: 0; }
-
-#btn-styling-buddy .toggle p {
-  float: left;
-  color: white;
-  padding: 1px;
-  font-size: 55%;
-  padding-left: 4px; }
 
 #full-body {
   background: #50E2E3; 
@@ -557,9 +555,27 @@ button.button-outline.button-calm.button-small.selected-btn2{
   background-color: #77CE20;
 }
 
-/*#track-color{
-  background-color:#1D7E80;
-}*/
+.toggle.toggle-dark-green input:checked + .track {
+  border-color: #006D6F;
+  background-color: #006D6F; 
+  /*width:10px;*/
+  height:15px;
+  float:left;
+}
+
+.toggle.toggle-dark-green input + .track{
+  height:15px;
+  background-color: #979797;
+  border-color: #979797;
+}
+
+.toggle.toggle-dark-green.toggle-small{
+  position:relative; 
+  z-index:3; 
+  margin-top:1px; 
+  margin-left:2px; 
+  margin-bottom:-20px;
+}
 
 .boardline {
   height: 2px;
@@ -8692,7 +8708,7 @@ input:checked + .checkbox-icon:after {
 
 .toggle-small .track {
   border: 0;
-  width: 34px;
+  width: 38px;
   height: 15px;
   background: #9e9e9e; }
 
@@ -8700,15 +8716,15 @@ input:checked + .checkbox-icon:after {
   background: rgba(0, 150, 137, 0.5); }
 
 .toggle-small .handle {
-  top: 2px;
+  top: 3px;
   left: 4px;
-  width: 21px;
-  height: 21px;
+  width: 18px;
+  height: 18px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25); }
 
 .toggle-small input:checked + .track .handle {
-  -webkit-transform: translate3d(16px, 0, 0);
-  transform: translate3d(16px, 0, 0);
+  -webkit-transform: translate3d(22px, 0, 0);
+  transform: translate3d(22px, 0, 0);
   background: #009689; }
 
 .toggle-small.item-toggle .toggle {
