--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -14,13 +14,18 @@
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;" ng-click="activeHide()" ng-class="class">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
           <i class="icon ion-eye-disabled"></i>Hide Tiles
-          <label class="toggle" style="position:relative; z-index:3" ng-if="hide">
-            <input type="checkbox">
-            <div class="track" id="track-color">
-              <div class="handle" id="handle-color"></div>
-            </div>
-          </label>
+
+          <div class="toggle-content" style="float:right">
+            <label class="toggle toggle-dark-green toggle-small" ng-if="hide">
+              <input type="checkbox">
+              <div class="track" id="track-color">
+                <div class="handle" id="handle-color"></div>
+              </div>
+            </label>
+            <p class="toggle-note" ng-if="hide">Show All Tiles</p>
+          </div>
         </button>
+
         <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p>
         </button>
 
