--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -6,7 +6,7 @@
           <a href="/#/settings"><i class="icon ion-gear-b"></i> Settings</a>
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
-          <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
+          <i class="icon ion-grid" id="small-icon"></i><a href="#/board_factory">Board Factory</a>
           <br>
           <p class="show-hide-label">*Requires Wifi</p>
         </button>
@@ -28,7 +28,6 @@
 
         <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p>
         </button>
-
         <!-- <button class="done-button"><p><a href="#/home">DONE</a></p></div> -->
       </div>
     </ion-header-bar>
