--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -31,7 +31,7 @@
         </div>
 
         <span ng-repeat="row in rows">
-          <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" style="position:relative; z-index:0;">
+          <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" style="position:relative; z-index:0;" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex}">
             <!-- <span ng-show="filled_tiles.indexOf(col+row)!=-1">
               <i class="icon ion-ios-minus-outline" style="float:left;"></i>
             </span> -->
