--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -29,6 +29,20 @@ $dark:                            #444 !default;
   margin-right: -10px;
 }
 
+.hide-symbol{
+  width:18px;
+  height:18px;
+  border-radius:10px;
+  background-color:white;
+  float:right;
+  /*border-style: solid;*/
+  /*border-width: 2px;*/
+  color:#E6213F;
+  margin-top: -8px;
+  margin-right: -7px;
+  font-size:1.25em;
+}
+
 .manual-minus p{
   color:#B70016;
   font-size: 3em;
