--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -72,6 +72,7 @@
               <div class="tile-section-border">
                 <span ng-repeat="row in rows">
                   <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])">
+                    <div class="hide-symbol" ng-show="editable"><p><i class="icon ion-eye-disabled"></i></p></div>
                     <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                       {{board.symbols[col+row].word}}<br>
                       <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
