--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -55,6 +55,8 @@ $dark:                            #444 !default;
   margin-top: -8px;
   margin-right: -7px;
   font-size:1.25em;
+  position: relative;
+  z-index: 5;
 }
 
 .hide-symbol2{
