--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -99,18 +99,17 @@
 
             <div class="col col-40" id="board-section" style="margin-top:-43px;">
               <div class="boards" ng-repeat="board in dummyBoards | slice:start:end">
-                <div class="hide-symbol2" ng-show="editable">
+                <!-- <div class="hide-symbol2" ng-show="editable">
                   <p><i class="icon ion-eye-disabled"></i></p>
-                </div>
+                </div> -->
                 <!-- <div class="triangle-topright"></div> -->
                 <!-- <div class="boardline"></div> -->
                 <!-- <div class="top-content" style="position: relative; z-index:2;"> -->
                   <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
 
-                  <img src="img/new_dev_assets/board_tile_notched_default.svg" alt="board tile" style="position:fixed;">
+                  <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
           
                   <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
-                <!-- </div> -->
               </div>
             </div>
           </div>
