--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -84,6 +84,7 @@
               <div class="tile-section-border">
                 <span ng-repeat="row in rows">
                   <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex, greyEdit:board.symbols[col+row] == selectedIndex2}";>
+                    <!-- <div class="greyEdit" ng-show="hidden1"></div> -->
                     <div class="hide-symbol" ng-show="editable">
                       <p><i class="icon ion-eye-disabled"></i></p>
                     </div>
@@ -107,7 +108,7 @@
                 <!-- <div class="top-content" style="position: relative; z-index:2;"> -->
                   <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
 
-                  <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
+                  <img src="img/new_dev_assets/board_tile_notched_default.svg" style="position:relative; z-index:0;" alt="board tile">
           
                   <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
               </div>
