pushing to trouble shoot

--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -41,6 +41,8 @@ $dark:                            #444 !default;
   font-size: .75em;
   /*margin: 8px;*/
   float: left;
+  position: relative;
+  z-index: 7;
   text-align: center;
   /*margin-left: -4px;
   margin-top: -2px;*/
