--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -84,6 +84,7 @@
               <div class="tile-section-border">
                 <span ng-repeat="row in rows">
                   <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex, greyEdit:board.symbols[col+row] == selectedIndex2}";>
+                    <div class="tile greyEdit" ng-show="{{$scope.greyedTiles.indexOf(row+col) > -1}}">{{board.symbols[col+row].word}}</div>
                     <!-- <div class="greyEdit" ng-show="hidden1"></div> -->
                     <div class="hide-symbol" ng-show="editable">
                       <p><i class="icon ion-eye-disabled"></i></p>
@@ -92,8 +93,6 @@
                         {{board.symbols[col+row].word}}<br>
                         <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
                       </span>
-
-                      <div class="tile greyEdit" ng-show="$scope.greyedTiles.indexOf(row+col) > -1">{{board.symbols[col+row].word}}</div>
                       <!-- ng-show="{{$scope.greyedTiles.indexOf(row+col) > -1}}" -->
                   </div>
                 </span>
